--- a/index.html
+++ b/index.html
@@ -4,29 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ella's Personal Website</title>
-    <!-- created by Ella Li on Dec 10, 2024 -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
         body {
-            font-family: 'Lora', serif; 
-            background: linear-gradient(135deg, #eef2ff, #dfe7fd); 
-            color: #4a4a4a; 
+            font-family: 'Lora', serif; /* Elegant serif font */
+            background: linear-gradient(135deg, #eef2ff, #dfe7fd); /* Muted gradient with soft periwinkle tones */
+            color: #4a4a4a; /* Muted, readable text color */
             margin: 0;
             padding: 0;
             line-height: 1.6;
         }
 
         header {
-            background: linear-gradient(135deg, #a7c7e7, #cddffd); 
+            background: linear-gradient(135deg, #a7c7e7, #cddffd); /* Soft periwinkle gradient */
             color: #4a4a4a;
             text-align: center;
             padding: 3rem 0;
-            border-bottom: 3px solid #a7c7e7; 
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+            border-bottom: 3px solid #a7c7e7; /* Periwinkle border */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Soft shadow */
         }
 
         header h1 {
-            font-family: 'Lora', serif; 
+            font-family: 'Lora', serif; /* Elegant serif font for a classy feel */
             font-size: 3.5rem;
             margin: 0;
             font-weight: 700;
@@ -37,7 +36,7 @@
             position: sticky;
             top: 0;
             z-index: 1000;
-            background: #f8f9ff; 
+            background: #f8f9ff; /* Light muted background for nav */
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -51,7 +50,7 @@
             font-weight: 600;
             padding: 1.5rem;
             text-transform: uppercase;
-            color: #5e81ac; 
+            color: #5e81ac; /* Periwinkle accent color */
             transition: background 0.3s, color 0.3s;
         }
 
@@ -65,15 +64,15 @@
             margin: 4rem auto;
             max-width: 900px;
             padding: 2rem;
-            background: #ffffff; 
-            border: 2px solid #a7c7e7; 
+            background: #ffffff; /* White background for readability */
+            border: 2px solid #a7c7e7; /* Periwinkle border */
             border-radius: 12px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); 
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
             position: relative;
         }
 
         section h2 {
-            font-family: 'Lora', serif; 
+            font-family: 'Lora', serif; /* Elegant serif font for headings */
             color: #5e81ac;
             font-size: 2.5rem;
             margin-bottom: 1rem;
@@ -87,8 +86,8 @@
         }
 
         .w3-table-all {
-            border: 2px solid #a7c7e7; 
-            background: #fafafa; 
+            border: 2px solid #a7c7e7; /* Periwinkle table border */
+            background: #fafafa; /* Light gray background for table */
             color: #4a4a4a;
             font-size: 1rem;
             border-radius: 8px;
@@ -106,24 +105,24 @@
         }
 
         .w3-table-all tr:nth-child(even) {
-            background: #f6f6f6; 
+            background: #f6f6f6; /* Light alternating row colors */
         }
 
         img {
             display: block;
             margin: 1rem auto;
             border-radius: 12px;
-            border: 3px solid #5e81ac; 
+            border: 3px solid #5e81ac; /* Periwinkle border around images */
         }
 
         footer {
-            background: linear-gradient(135deg, #a7c7e7, #cddffd); 
+            background: linear-gradient(135deg, #a7c7e7, #cddffd); /* Soft muted gradient for footer */
             color: #4a4a4a;
             text-align: center;
             padding: 2rem 0;
-            margin-top: auto;
+            margin-top: 2rem;
             border-top: 3px solid #a7c7e7;
-            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1); 
+            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1); /* Soft shadow at the top of the footer */
         }
 
         footer p {
@@ -152,14 +151,14 @@
     <section id="about">
         <h2>About Me</h2>
         <img src="about-me.jpg" alt="A photo of me" style="width: 450px; height: 300px;">
-        <p>Welcome to my personal website! I'm Ella, a passionate creator who loves doing passion projects and explore my creativity. Let's find out more about myself!</p>
+        <p>Welcome to my game-themed portal! I'm Ella, a passionate creator who loves doing passion projects and creativity. Let's explore!</p>
     </section>
 
     <section id="hobbies" style="overflow: hidden; font-size: 1.2rem;">
         <h2>Hobbies</h2>
         <img src="hobbies.jpg" alt="Image representing hobbies" 
          style="width: 200px; height: 300px; border-radius: 12px; border: 3px solid #5e81ac; float: right; margin-left: 1.5rem; margin-bottom: 1rem;">
-        <p>When I'm not busy, I enjoy:</p>
+        <p>When I'm not gaming, I enjoy:</p>
         <ul>
             <li>Designing</li>
             <li>Video editing</li>
@@ -181,7 +180,7 @@
                 <tr>
                     <td><img src="project1.jpg" alt="What Kind of Fool Am I" style="width: 150px; height: 100px;"></td>
                     <td>What Kind of Fool Am I</td>
-                    <td>A self-choreographed solo</td>
+                    <td>A self-choreographed solo in a virtual arena</td>
                     <td><a href="https://youtu.be/nr6c-ypJx_w" style="color: #5e81ac;">Visit</a></td>
                 </tr>
                 <tr>
