--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             border-radius: 12px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
             position: relative;
+            clear: both; /* Clear any floats in the section */
         }
 
         section h2 {
@@ -154,7 +155,7 @@
         <p>Welcome to my game-themed portal! I'm Ella, a passionate creator who loves doing passion projects and creativity. Let's explore!</p>
     </section>
 
-    <section id="hobbies" style="overflow: hidden; font-size: 1.2rem;">
+    <section id="hobbies">
         <h2>Hobbies</h2>
         <img src="hobbies.jpg" alt="Image representing hobbies" 
          style="width: 200px; height: 300px; border-radius: 12px; border: 3px solid #5e81ac; float: right; margin-left: 1.5rem; margin-bottom: 1rem;">
