--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             margin-top: 2rem;
             border-top: 3px solid #a7c7e7;
             box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1); /* Soft shadow at the top of the footer */
+            clear: both; /* Ensure no extra space is left below */
         }
 
         footer p {
