--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
             color: #4a4a4a;
             text-align: center;
             padding: 2rem 0;
-            margin-top: 2rem;
+            margin-top: 0; /* Ensure no extra space above the footer */
             border-top: 3px solid #a7c7e7;
             box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1); /* Soft shadow at the top of the footer */
-            clear: both; /* Ensure no extra space is left below */
+            clear: both; /* Ensure the footer clears any floating elements above it */
         }
 
         footer p {
