--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             background: linear-gradient(135deg, #eef2ff, #dfe7fd);
             color: #4a4a4a;
             line-height: 1.6;
+            display: block;
         }
 
         header {
@@ -124,10 +125,11 @@
             background: linear-gradient(135deg, #a7c7e7, #cddffd);
             color: #4a4a4a;
             text-align: center;
-            padding: 1rem 0;
+            padding: 1rem 0; /* Reduced padding to decrease height */
             border-top: 3px solid #a7c7e7;
             box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
             clear: both; /* Ensure that the footer clears any floats */
+            margin-top: 0; /* Remove any margin at the top of the footer */
         }
 
         footer p {
