--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <td><img src="project2.jpg" alt="Moodbloom" style="width: 150px; height: 100px;"></td>
                     <td>Moodbloom</td>
                     <td>A mood-tracking app to track your mood levels</td>
-                    <td><a href="https://www.figma.com/design/wYklmzNcksPWUzWinRUMZI/Li_Ella_M3?node-id=0-1&t=xtnZGUugjgjGLjCh-1" style="color: #5e81ac;">Visit</a></td>
+                    <td><a href="https://www.figma.com/proto/wYklmzNcksPWUzWinRUMZI/Li_Ella_M3?node-id=0-1&t=1GgOTJvouJqGHYYn-1" style="color: #5e81ac;">Visit</a></td>
                 </tr>
             </table>
         </div>
