--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <tr>
                     <td><img src="project1.jpg" alt="What Kind of Fool Am I" style="width: 150px; height: 100px;"></td>
                     <td>What Kind of Fool Am I</td>
-                    <td>A self-choreographed solo in a virtual arena</td>
+                    <td>A self-choreographed solo</td>
                     <td><a href="https://youtu.be/nr6c-ypJx_w" style="color: #5e81ac;">Visit</a></td>
                 </tr>
                 <tr>
