--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body, html {
             margin: 0;
             padding: 0;
-            height: 100%;
+            height: 100%;  /* Ensure the page takes full height */
         }
 
         body {
@@ -18,19 +18,9 @@
             background: linear-gradient(135deg, #eef2ff, #dfe7fd);
             color: #4a4a4a;
             line-height: 1.6;
-            display: block;
-            min-height: 100%;  /* Ensure the body takes full height */
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-        }
-
-        html {
-            height: 100%;
-        }
-
-        main {
-            flex-grow: 1;  /* Ensures content stretches to take full space before the footer */
+            min-height: 100%; /* Ensure the body takes full height */
         }
 
         header {
@@ -86,8 +76,8 @@
             border-radius: 12px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             position: relative;
-            clear: both; /* Clear floated elements */
-            overflow: hidden; /* Prevent floating elements from causing overflow */
+            clear: both;
+            overflow: hidden;
         }
 
         section h2 {
@@ -142,6 +132,9 @@
             border-top: none;
             box-shadow: none;
             clear: both;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
 
         footer p {
