--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         body, html {
             margin: 0;
             padding: 0;
-            height: 100%;  /* Ensure the page takes full height */
+            height: 100%;  /* Full height */
+            overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
         body {
@@ -20,7 +21,7 @@
             line-height: 1.6;
             display: flex;
             flex-direction: column;
-            min-height: 100%; /* Ensure the body takes full height */
+            min-height: 100%; /* Ensures the body is at least 100% height */
         }
 
         header {
@@ -128,12 +129,10 @@
             color: #4a4a4a;
             text-align: center;
             padding: 1rem 0;
-            margin-top: 0;
-            border-top: none;
-            box-shadow: none;
+            margin-top: 0;  /* Remove extra margin */
+            border-top: none;  /* Optional if you don't want a border */
+            box-shadow: none;  /* Optional if you don't want a shadow */
             clear: both;
-            position: relative;
-            bottom: 0;
             width: 100%;
         }
 
