--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body, html {
             margin: 0;
             padding: 0;
-            height: 100%;  /* Full height */
+            height: 100%;  /* Ensure full height for body and html */
             overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
@@ -21,7 +21,12 @@
             line-height: 1.6;
             display: flex;
             flex-direction: column;
-            min-height: 100%; /* Ensures the body is at least 100% height */
+            min-height: 100%; /* Ensures the body takes full height */
+        }
+
+        /* Make sure the content takes up remaining space */
+        main {
+            flex: 1;  /* Takes the remaining space between header and footer */
         }
 
         header {
@@ -129,9 +134,9 @@
             color: #4a4a4a;
             text-align: center;
             padding: 1rem 0;
-            margin-top: 0;  /* Remove extra margin */
-            border-top: none;  /* Optional if you don't want a border */
-            box-shadow: none;  /* Optional if you don't want a shadow */
+            margin-top: 0;
+            border-top: none;
+            box-shadow: none;
             clear: both;
             width: 100%;
         }
