--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         body, html {
             margin: 0;
             padding: 0;
-            height: 100%;  /* Full height */
-            overflow-x: hidden; /* Prevent horizontal scroll */
+            height: 100%;  /* Ensure the page takes full height */
         }
 
         body {
@@ -21,7 +20,7 @@
             line-height: 1.6;
             display: flex;
             flex-direction: column;
-            min-height: 100%; /* Ensures the body is at least 100% height */
+            min-height: 100%; /* Ensure the body takes full height */
         }
 
         header {
@@ -129,10 +128,12 @@
             color: #4a4a4a;
             text-align: center;
             padding: 1rem 0;
-            margin-top: 0;  /* Remove extra margin */
-            border-top: none;  /* Optional if you don't want a border */
-            box-shadow: none;  /* Optional if you don't want a shadow */
+            margin-top: 0;
+            border-top: none;
+            box-shadow: none;
             clear: both;
+            position: relative;
+            bottom: 0;
             width: 100%;
         }
 
