--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         body, html {
             margin: 0;
             padding: 0;
-            height: 100%;  /* Ensure the page takes full height */
+            height: 100%;  /* Ensure full height for body and html */
+            overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
         body {
@@ -20,7 +21,12 @@
             line-height: 1.6;
             display: flex;
             flex-direction: column;
-            min-height: 100%; /* Ensure the body takes full height */
+            min-height: 100%; /* Ensures the body takes full height */
+        }
+
+        /* Make sure the content takes up remaining space */
+        main {
+            flex: 1;  /* Takes the remaining space between header and footer */
         }
 
         header {
@@ -132,8 +138,6 @@
             border-top: none;
             box-shadow: none;
             clear: both;
-            position: relative;
-            bottom: 0;
             width: 100%;
         }
 
