--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             padding: 0;
             height: 100%;  /* Ensure full height for body and html */
             overflow-x: hidden; /* Prevent horizontal scroll */
+            box-sizing: border-box; /* Include padding and border in element's total width and height */
         }
 
         body {
@@ -22,11 +23,6 @@
             display: flex;
             flex-direction: column;
             min-height: 100%; /* Ensures the body takes full height */
-        }
-
-        /* Make sure the content takes up remaining space */
-        main {
-            flex: 1;  /* Takes the remaining space between header and footer */
         }
 
         header {
@@ -150,6 +146,11 @@
         @font-face {
             font-family: 'Lora';
             src: url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap');
+        }
+
+        /* Ensure the main content takes the rest of the page space */
+        main {
+            flex: 1;
         }
     </style>
 </head>
