--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             background: linear-gradient(135deg, #eef2ff, #dfe7fd);
             color: #4a4a4a;
             line-height: 1.6;
-            display: block;
         }
 
         header {
@@ -125,11 +124,10 @@
             background: linear-gradient(135deg, #a7c7e7, #cddffd);
             color: #4a4a4a;
             text-align: center;
-            padding: 1rem 0; /* Reduced padding to decrease height */
+            padding: 2rem 0;
             border-top: 3px solid #a7c7e7;
             box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
             clear: both; /* Ensure that the footer clears any floats */
-            margin-top: 0; /* Remove any margin at the top of the footer */
         }
 
         footer p {
@@ -188,14 +186,14 @@
                 <tr>
                     <td><img src="project1.jpg" alt="What Kind of Fool Am I" style="width: 150px; height: 100px;"></td>
                     <td>What Kind of Fool Am I</td>
-                    <td>A self-choreographed solo</td>
+                    <td>A self-choreographed solo in a virtual arena</td>
                     <td><a href="https://youtu.be/nr6c-ypJx_w" style="color: #5e81ac;">Visit</a></td>
                 </tr>
                 <tr>
                     <td><img src="project2.jpg" alt="Moodbloom" style="width: 150px; height: 100px;"></td>
                     <td>Moodbloom</td>
                     <td>A mood-tracking app to track your mood levels</td>
-                    <td><a href="https://www.figma.com/proto/wYklmzNcksPWUzWinRUMZI/Li_Ella_M3?node-id=1-2&starting-point-node-id=1%3A2">Visit</a></td>
+                    <td><a href="https://www.figma.com/design/wYklmzNcksPWUzWinRUMZI/Li_Ella_M3?node-id=0-1&t=xtnZGUugjgjGLjCh-1" style="color: #5e81ac;">Visit</a></td>
                 </tr>
             </table>
         </div>
