--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ella's Personal Website</title>
+    <!-- created by Ella Li on Dec 10, 2024 -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
-        /* Global Reset */
         body, html {
             margin: 0;
             padding: 0;
@@ -73,8 +73,8 @@
             border-radius: 12px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             position: relative;
-            clear: both; /* Clear floated elements */
-            overflow: hidden; /* Prevent floating elements from causing overflow */
+            clear: both;
+            overflow: hidden; 
         }
 
         section h2 {
@@ -127,7 +127,7 @@
             padding: 2rem 0;
             border-top: 3px solid #a7c7e7;
             box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
-            clear: both; /* Ensure that the footer clears any floats */
+            clear: both; 
         }
 
         footer p {
@@ -135,7 +135,6 @@
             font-size: 1rem;
         }
 
-        /* Font Import */
         @font-face {
             font-family: 'Lora';
             src: url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap');
