--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ella's Personal Website</title>
     <!-- created by Ella Li on Dec 10, 2024 -->
+    <!--
+    Code copied from: https://www.w3schools.com/w3css/4/w3.css
+    Author: W3Schools
+    Name: W3.CSS Framework
+    Description: A CSS framework for creating responsive websites with built-in styling.
+    Date retrieved: December 9, 2024
+    -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
         body, html {
